<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

  <ImageButton
      android:id="@+id/backButton"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginStart="4dp"
      android:layout_marginTop="8dp"
      android:background="?attr/selectableItemBackgroundBorderless"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_back_arrow" />

  <ImageButton
      android:id="@+id/feedbackIcon"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:background="@android:color/transparent"
      app:layout_constraintBottom_toBottomOf="@+id/backButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.02"
      app:layout_constraintStart_toEndOf="@+id/backButton"
      app:layout_constraintTop_toTopOf="@+id/backButton"
      app:srcCompat="@drawable/ic_about" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="About"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/feedbackIcon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/feedbackIcon"
      app:layout_constraintTop_toTopOf="@+id/feedbackIcon" />

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/backButton">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="6dp"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/app_name"
          android:textSize="24sp"
          android:textStyle="bold" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight=".2"
          android:text="Description :"
          android:textStyle="bold"
          android:textSize="16sp" />

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"
          android:layout_weight="1" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/Description" />

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"
          android:layout_weight="1" />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight=".2"
          android:text="Features :"
          android:textSize="16sp"
          android:textStyle="bold"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"
          android:layout_weight="1" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/MultipleMatrices" />

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"
          android:layout_weight="1" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/MultipleResultCards" />

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"
          android:layout_weight="1" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/MatrixOperations" />

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"
          android:layout_weight="1" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/MatrixNavigation" />

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"
          android:layout_weight="1" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/MatrixLaws" />

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"
          android:layout_weight="1" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/Calculator" />

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"
          android:layout_weight="1" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/Offline" />

      <View
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:layout_marginTop="6dp"
          android:background="?android:attr/listDivider" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="6dp"
          android:layout_weight=".1"
          android:text="Sources :"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/link1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight=".1"
          android:text="@string/hyperlink1" />

      <TextView
          android:id="@+id/link2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="6dp"
          android:layout_weight=".1"
          android:text="@string/hyperlink2" />


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:layout_weight=".1"
          android:text="Version - 0.0.1 (Alpha)" />


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginTop="6dp"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/TOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TOS" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" | " />

        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacyPolicy" />

      </LinearLayout>


    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>